terraform-module/module-output/modules/sg/sg.tf
resource "aws_security_group" "ec2-sg" {
    name = "myec2-sg"

    ingress {
        description = "Allow inbound from secret application"
        from_port = 8433
        to_port = 8433
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

resource "aws_security_group" "elb-sg" {
    name = "myelb-sg"

    ingress {
        description = "Allow inbound from secret application"
        from_port = 8433
        to_port = 8433
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
    }

    egress {
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
    }
}

output "sg_id" {
    value = aws_security_group.ec2-sg
}
